--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Facebook Pedro Muñoz</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300i,400,700" rel="stylesheet">
   <link rel="stylesheet" href="css/estilos.css">
+  <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
   
